<resources>
    <string name="app_name">Biblo Search</string>
    <string name="recents">Recents</string>
    <string name="favourites">Favourites</string>
    <string name="more">Show more</string>
    <string name="search">Search</string>
    <string name="search_books">Search any books</string>
    <string name="settings">Settings</string>
    <string name="no_recents_yet">No recents yet! \n Search any books now!</string>
    <string name="no_favourites_yet">No favourites yet! \n Star any books you love now!</string>
    <string name="publisher">Publisher</string>
    <string name="description">Description</string>
    <string name="sample_description">Rescued from the outrageous neglect of his aunt and uncle, a young boy with a great destiny proves his worth while attending Hogwarts School for Witchcraft and Wizardry</string>
    <string name="book_image_cover">book image cover</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="read_preview">Read Preview</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_view_text">Favourites is empty</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="forward_pointing_arrow">Forward pointing arrow</string>
    <string name="search_amp_discover"><![CDATA[Search & Discover]]></string>
    <string name="find_new_experiences_with_biblosearch">Find new experiences with biblosearch</string>
    <string name="server_client_id">480093745854-ccp32rob7bdm5nakggkor4db95acho4v.apps.googleusercontent.com</string>
</resources>