<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <ImageView
            android:id="@+id/details_book_image"
            android:layout_width="128dp"
            android:layout_height="192dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/harry_potter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/book_image_cover" />

        <TextView
            android:id="@+id/details_book_title"
            style="@style/textStyleBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="4"
            app:layout_constraintBottom_toBottomOf="@+id/details_book_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/details_book_image"
            app:layout_constraintTop_toTopOf="@+id/details_book_image"
            app:layout_constraintVertical_bias="0.07999998"
            tools:text="Harry Potter and the Sorcerer's Stone" />

        <TextView
            android:id="@+id/details_book_subtitle"
            style="@style/textStyleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/details_book_image"
            app:layout_constraintTop_toBottomOf="@+id/details_book_title"
            tools:text="A One-act Play" />

        <TextView
            android:id="@+id/details_book_authors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="2"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/details_book_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/details_book_image"
            app:layout_constraintTop_toBottomOf="@+id/details_book_subtitle"
            tools:text="J. K. Rowling" />

        <TextView
            android:id="@+id/tv_publisher"
            style="@style/textStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="12sp"
            android:text="@string/publisher"
            app:layout_constraintStart_toStartOf="@+id/details_book_image"
            app:layout_constraintTop_toBottomOf="@+id/details_book_image" />

        <TextView
            android:id="@+id/details_book_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLength="40"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@+id/tv_publisher"
            app:layout_constraintEnd_toEndOf="@+id/details_book_authors"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/tv_publisher"
            app:layout_constraintTop_toTopOf="@+id/tv_publisher"
            tools:text="Leatherbound Bestsellers" />

        <TextView
            android:id="@+id/text_description"
            style="@style/textStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="12sp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/tv_publisher"
            app:layout_constraintTop_toBottomOf="@+id/tv_publisher" />

        <TextView
            android:id="@+id/details_book_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="@string/sample_description"
            app:layout_constraintEnd_toEndOf="@+id/details_book_authors"
            app:layout_constraintStart_toStartOf="@+id/text_description"
            app:layout_constraintTop_toBottomOf="@+id/text_description" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_read_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/primary_light"
            android:drawableEnd="@drawable/icbook"
            android:text="@string/read_preview"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/details_book_description"
            app:layout_constraintStart_toStartOf="@+id/details_book_description"
            app:layout_constraintTop_toBottomOf="@+id/details_book_description"
            app:layout_constraintVertical_bias="0.25" />




    </androidx.constraintlayout.widget.ConstraintLayout>
